# optimalRouteTechTask

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/: app.py  routes.py
common/: database.py  settings.py
docker_compose/: app.yml  storage.yml
models/: models.py
repositories/: repo.py
services/: logic.py
